refactor: change to  generic method and add multithreading to process data from api