@@ -5,6 +5,7 @@ import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
+import org.springframework.web.util.UriComponentsBuilder;
 import pl.czyzlowie.modules.forecast.client.OpenMeteoClient;
 import pl.czyzlowie.modules.forecast.client.dto.OpenMeteoLightResponse;
 import pl.czyzlowie.modules.forecast.entity.VirtualStation;
@@ -14,7 +15,11 @@ import pl.czyzlowie.modules.forecast.repository.VirtualStationDataRepository;
 import pl.czyzlowie.modules.forecast.repository.VirtualStationRepository;
 
 import java.time.LocalDateTime;
-import java.util.*;
+import java.util.HashSet;
+import java.util.List;
+import java.util.Objects;
+import java.util.Set;
+import java.util.concurrent.CompletableFuture;
 import java.util.stream.Collectors;
 
 @Service
@@ -28,58 +33,88 @@ public class VirtualStationDataService {
     private final WeatherForecastMapper mapper;
 
     @Value("${forecast.api.url}")
-    private String urlTemplate;
+    private String apiUrl;
 
-    private static final String CURRENT_PARAMS = "&current=temperature_2m,apparent_temperature,rain,weather_code,wind_speed_10m,wind_direction_10m,wind_gusts_10m,surface_pressure,relative_humidity_2m&timezone=Europe/Warsaw";
 
-    @Transactional
     public void fetchAndSaveCurrentData() {
         log.info("START: Pobieranie danych bieżących (Light)...");
 
         List<VirtualStation> stations = virtualStationRepository.findAllByActiveTrue();
+        if (stations.isEmpty()) {
+            log.info("Brak aktywnych stacji wirtualnych.");
+            return;
+        }
 
-        List<VirtualStationData> fetchedData = stations.parallelStream()
-                .map(this::fetchDataFromApi)
+        List<VirtualStationData> fetchedData = stations.stream()
+                .map(station -> CompletableFuture.supplyAsync(() -> fetchDataFromApi(station)))
+                .toList()
+                .stream()
+                .map(CompletableFuture::join)
                 .filter(Objects::nonNull)
                 .toList();
 
-        if (fetchedData.isEmpty()) return;
+        if (fetchedData.isEmpty()) {
+            log.warn("Nie udało się pobrać danych dla żadnej stacji.");
+            return;
+        }
 
-        Set<LocalDateTime> times = fetchedData.stream()
+        saveNewDataOnly(fetchedData);
+    }
+
+    @Transactional
+    protected void saveNewDataOnly(List<VirtualStationData> fetchedData) {
+        Set<LocalDateTime> measurementTimes = fetchedData.stream()
                 .map(VirtualStationData::getMeasurementTime)
                 .collect(Collectors.toSet());
 
         Set<String> existingKeys = new HashSet<>();
-        for (LocalDateTime time : times) {
-
+        for (LocalDateTime time : measurementTimes) {
             Set<String> existingIds = virtualStationDataRepository.findStationIdsByMeasurementTime(time);
-            existingIds.forEach(id -> existingKeys.add(id + "_" + time));
+            existingIds.forEach(id -> existingKeys.add(generateKey(id, time)));
         }
 
         List<VirtualStationData> toSave = fetchedData.stream()
                 .filter(data -> {
-                    String key = data.getVirtualStation().getId() + "_" + data.getMeasurementTime();
+                    String key = generateKey(data.getVirtualStation().getId(), data.getMeasurementTime());
                     return !existingKeys.contains(key);
                 })
-                .collect(Collectors.toList());
+                .toList();
 
         if (!toSave.isEmpty()) {
             virtualStationDataRepository.saveAll(toSave);
-            log.info("Zapisano {} nowych pomiarów dla godziny {}.", toSave.size(), times);
+            log.info("SUKCES: Zapisano {} nowych pomiarów dla czasów: {}.", toSave.size(), measurementTimes);
         } else {
-            log.info("Brak nowych danych. Wszystkie pomiary dla {} już istnieją.", times);
+            log.info("SKIP: Wszystkie pobrane dane już istnieją w bazie.");
         }
     }
 
     private VirtualStationData fetchDataFromApi(VirtualStation station) {
         try {
-            String fullUrl = String.format(urlTemplate, station.getLatitude(), station.getLongitude()) + CURRENT_PARAMS;
-            return openMeteoClient.fetchData(fullUrl, OpenMeteoLightResponse.class)
+            String url = buildUrl(station);
+            return openMeteoClient.fetchData(url, OpenMeteoLightResponse.class)
                     .map(response -> mapper.toVirtualStationData(response, station))
                     .orElse(null);
+
         } catch (Exception e) {
-            log.error("Błąd API dla stacji {}", station.getName());
+            log.error("Błąd pobierania danych dla stacji '{}' (ID: {}): {}",
+                    station.getName(), station.getId(), e.getMessage());
             return null;
         }
+    }
+
+    private String buildUrl(VirtualStation station) {
+        return UriComponentsBuilder.fromUriString(apiUrl)
+                .queryParam("latitude", station.getLatitude())
+                .queryParam("longitude", station.getLongitude())
+                .queryParam("current", "temperature_2m,apparent_temperature,rain,weather_code," +
+                        "wind_speed_10m,wind_direction_10m,wind_gusts_10m," +
+                        "surface_pressure,relative_humidity_2m")
+                .queryParam("timezone", "Europe/Warsaw")
+                .build()
+                .toUriString();
+    }
+
+    private String generateKey(String stationId, LocalDateTime time) {
+        return stationId + "_" + time;
     }
 }
